--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,12 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:3.0.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.0.1'
+
+    testImplementation 'org.mockito:mockito-core:2.13.0'
+    androidTestImplementation 'org.mockito:mockito-core:2.13.0'
+
+    testImplementation 'com.github.fabioCollini.daggermock:daggermock:0.8.2'
+    androidTestImplementation 'com.github.fabioCollini.daggermock:daggermock:0.8.2'
 }
