--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,13 @@ dependencies {
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
+    //Image downloading
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+
+    //Android views biding
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
     //Java Objects into JSON and back
     implementation 'com.google.code.gson:gson:2.8.2'
 
